# OpenManus-RL

./: .env.example  .gitignore  .gitmodules  README.md  memory.md  pyproject.toml  requirements_docker.txt
datasets/: README.md
docs/: ROLLOUT_GUIDE.md
examples/: README_textworld_usage.md  simple_textworld_test.py  textworld_basic_example.py  textworld_interactive_demo.py
openmanus_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openmanus_rl/environments/: env_manager.py
openmanus_rl/environments/env_package/alfworld/: envs.py
openmanus_rl/environments/env_package/tool_use/: envs.py  manager.py  reward_manager.py
openmanus_rl/environments/env_package/webshop/webshop/: pyproject.toml
openmanus_rl/environments/prompts/: __init__.py  alfworld.py  tool_use.py  webshop.py
openmanus_rl/memory/: __init__.py  summarized_memory.py
openmanus_rl/multi_turn_rollout/: __init__.py  modular_stages.py  openmanus_rollout.py
openmanus_rl/tools/: base.py
openmanus_rl/tools/google_search/: tool.py
scripts/: process_tool_use_data.py
scripts/ppo_train/: train_alfworld.sh
scripts/rollout/: alfworld.py  gaia.py  openmanus_rollout.py  run_alfworld_rollout.py  unified_rollout.py  webshop.py
test/: alfworld_rollout.py  run_alfworld.sh  test_rollout_mock.py
verl_archive/: protocol.py
verl_archive/workers/actor/: dp_actor.py
