[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "openmanus-rl"
description = "OpenManus-RL: Open Platform for Generalist LLM Reasoning Agents with RL optimization"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"
license = {file = "LICENSE"}
keywords = ["reinforcement-learning", "llm", "agents", "rl"]

# Keep runtime deps light; rely on requirements.txt for full env
dependencies = [
    "numpy",
    "pandas",
    "pyarrow>=19.0.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "wandb>=0.21.4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "openmanus_rl*",
]
exclude = [
    "verl*",
]

[project.optional-dependencies]
# install with: pip install -e .[dev]
dev = [
    "pytest",
    "pre-commit",
]

# install with: uv sync -e verl
verl = [
    "verl",
]

# GPU extras (Linux only) to avoid CUDA build attempts on macOS
# install with: uv sync --extra gpu
gpu = [
    "flash-attn; platform_system == 'Linux'",
    "liger-kernel; platform_system == 'Linux'",
]

[tool.uv.sources]
verl = { path = "verl" }

[tool.uv.workspace]
members = ["openmanus_rl/environments/env_package/webshop/webshop"]
